--- a/styles/main.css
+++ b/styles/main.css
@@ -17,3 +17,13 @@ header h2{
     color: #800000;
     text-indent: 30px;
 }
+img{
+    float: left;
+    text-shadow: 2px 2px 2px rgb(128, 0, 0)
+}
+main h3 {
+    margin-top: 3em;
+    font-size:  105%;
+
+}
+
