--- a/styles/main.css
+++ b/styles/main.css
@@ -1,8 +1,20 @@
+html{
+    background-image: linear-gradient(to bottom, white 0%, #facd8a 100%);
+}
+
 body {
     font-family:Arial, Helvetica, sans-serif; 
     font-size: 100%;
     margin-left: 10px;
+    width: 1000px;
+    background-color: white;
+    margin: 15px auto;
+    padding: 15px 1.5em;
+    border: 1px solid black;
+    border-radius: 25px;
+    box-shadow: 5px 5px 0 0;
 }
+
 a:focus, a:hover{
     font-style: italic ;
     color: orangered;
@@ -19,17 +31,31 @@ header h2{
 }
 img{
     float: left;
-    text-shadow: 2px 2px 2px rgb(128, 0, 0)
+    text-shadow: 2px 2px 2px rgb(128, 0, 0);
+    margin-left: 2em;
 }
+
+
 
 main{
     clear: left;
 }
 
 main h3 {
-    margin-top: 3em;
-    font-size:  105%;
+    font-size : 105%;
+    margin : 1.5em 2em 1.5em;
+    border: 5px double blue; 
+    border-radius: 20px;
+    box-shadow: 3px 3px 4px 4px red;
+    padding: .5em;
 
+}
+div.contact{
+    margin : 1.5em 2em 0em 2em;
+    border: 5px blue;
+    border-radius: 20px;
+    box-shadow:3px 3px 4px 4px red;
+    padding: 1em;
 }
 #list {
     line-height: 1.5em;
