--- a/styles/main.css
+++ b/styles/main.css
@@ -52,7 +52,7 @@ main h3 {
 }
 div.contact{
     margin : 1.5em 2em 0em 2em;
-    border: 5px blue;
+    border: 5px dotted blue;
     border-radius: 20px;
     box-shadow:3px 3px 4px 4px red;
     padding: 1em;
