--- a/styles/main.css
+++ b/styles/main.css
@@ -43,12 +43,20 @@ main{
 
 main h3 {
     font-size : 105%;
-    margin : 1.5em 2em 1.5em;
+    margin : 3em 2em 1.5em;
     border: 5px double blue; 
     border-radius: 20px;
     box-shadow: 3px 3px 4px 4px red;
     padding: .5em;
 
+}
+main nav {
+    margin: 1.5em 2em 1.5em;
+    border: 5px dashed blue;
+    border-radius: 20px;
+    box-shadow: 3px 4px 4px red;
+    padding: 0.5em;
+                     
 }
 div.contact{
     margin : 1.5em 2em 0em 2em;
