--- a/styles/project.css
+++ b/styles/project.css
@@ -34,48 +34,14 @@ img{
     text-shadow: 2px 2px 2px rgb(128, 0, 0);
     margin-left: 2em;
 }
-
 .shadow{
     text-shadow: 2px 2px 2px rgb(128, 0, 0);
 }
-
-
-
-
-
-main{
-    clear: left;
-}
-
-main h3 {
-    font-size : 105%;
-    margin : 3em 2em 1.5em;
-    border: 5px double blue; 
-    border-radius: 20px;
-    box-shadow: 3px 3px 4px 4px red;
-    padding: .5em;
-
-}
-main nav {
-    margin: 1.5em 2em 1.5em;
-    border: 5px dashed blue;
-    border-radius: 20px;
-    box-shadow: 3px 4px 4px red;
-    padding: 0.5em;
-                     
-}
-div.contact{
-    margin : 1.5em 2em 0em 2em;
-    border: 5px dotted blue;
-    border-radius: 20px;
-    box-shadow:3px 3px 4px 4px red;
-    padding: 1em;
-}
-#list {
-    line-height: 1.5em;
-}
-
-footer p.copyright{
-    text-align: center;
-    font-size: 80%
+article{
+    width: 70%;
+    float: left;
+    column-count: 2;
+    column-rule: 2px dotted maroon;
+    column-gap: 2em;
+    margin-left: 2em;
 }
