--- a/styles/project.css
+++ b/styles/project.css
@@ -6,7 +6,7 @@ body {
     font-family:Arial, Helvetica, sans-serif; 
     font-size: 100%;
     margin-left: 10px;
-    width: 1000px;
+    width: 90%;
     background-color: white;
     margin: 15px auto;
     padding: 15px 1.5em;
@@ -45,3 +45,32 @@ article{
     column-gap: 2em;
     margin-left: 2em;
 }
+article h3 {
+    column-span: all;
+}
+article img {
+        float: left;
+        margin-right: 1em;
+        margin-bottom: 1em;
+}
+article p::first-letter {
+    font-size: 3em;
+    font-weight: bold;
+    font-style: italic;
+    color: lightgreen;
+}
+aside{
+    width: 20%;
+    float: right;
+    padding: 0.1em 1em 1em;
+    background-color: white;
+}
+footer{
+    clear: both;
+    border-top: 2px solid maroon;
+}
+        
+
+footer p.copyright{
+    text-align: center;
+    font-size: 80%}
