--- a/styles/project.css
+++ b/styles/project.css
@@ -74,3 +74,11 @@ footer{
 footer p.copyright{
     text-align: center;
     font-size: 80%}
+    p.fixed{
+        width: auto;
+        position: fixed;
+        bottom: 35%;
+        right: 0%;
+        border: 3px solid darkgreen;
+        background-color: lightgreen;
+    }
