--- a/styles/project.css
+++ b/styles/project.css
@@ -64,7 +64,7 @@ aside{
     width: 20%;
     float: right;
     padding: 0.1em 1em 1em;
-    background-color: white;
+    background-color: yellowgreen;
 }
 footer{
     clear: both;
